# DedekindNumbersShiftFourMatrixMultiplication

./: .clang-format  .gitignore  LICENSE.txt  README.md
CPU/: CMakeLists.txt  Makefile  dedekind
CPU/benchmark/: CMakeLists.txt  DedekindNumberBenchmark.cpp  IntervalLengthBenchmark.cpp  main.cpp
CPU/src/: DataDir.h.in  Enumerator.cpp  Enumerator.hpp  main.cpp
CPU/test/: CMakeLists.txt  DedekindNumberTest.cpp  IntervalLengthTest.cpp
D9PartialSums/: summation.py
GPU/: Makefile
GPU/src/: Device.cu  Device.h  Enumerator.cpp  Enumerator.hpp  main.cpp
PartialSumsD9/: PartialSums9.txt
data/2/: Values_0_3.txt  intervals.txt
data/3/: Values_0_1.txt  Values_0_127.txt  Values_0_15.txt  Values_0_31.txt  Values_0_63.txt  Values_1_23.txt  Values_1_63.txt  Values_3_63.txt  intervals.txt
data/4/: Values_0_1023.txt  Values_0_16383.txt  Values_0_1911.txt  Values_0_1919.txt  Values_0_2047.txt  Values_0_23.txt  Values_0_255.txt  Values_0_279.txt  Values_0_287.txt  Values_0_319.txt  Values_0_32767.txt  Values_0_383.txt  Values_0_4095.txt  Values_0_511.txt  Values_0_6015.txt  Values_0_6143.txt  Values_0_65535.txt  Values_0_7.txt  Values_0_8191.txt  Values_0_831.txt  Values_0_855.txt  Values_0_863.txt  Values_0_895.txt  Values_15_1023.txt  Values_15_13311.txt  Values_15_2047.txt  Values_15_4095.txt  Values_15_4607.txt  Values_15_511.txt  Values_15_5119.txt  Values_15_6143.txt  Values_1_1023.txt  Values_1_127.txt  Values_1_16383.txt  Values_1_1911.txt  Values_1_1919.txt  Values_1_2047.txt  Values_1_279.txt  Values_1_287.txt  Values_1_31.txt  (+85 more)
src/: FDL.cpp  FDL.hpp  IVLCalc.cpp  IVLCalc.hpp  Timer.cpp  Timer.hpp  Uint128.cpp  Uint128.hpp
